# For-You-

./: .gitignore  README.md
aes-encryption-tool/: .gitignore  README.md
ai-chess-terminal/: README.md
ai-code-autocomplete/: .gitignore  README.md
ai-commit-writer/: README.md
ai-dungeon-game/: .gitignore  README.md
ai-resume-builder/: README.md
ai-terminal-assistant/: .gitignore  README.md
ai-thumbnail-generator/: .gitignore  README.md
auto-code-reviewer/: README.md
browser-ext-summariser/: README.md
chess-engine/: .gitignore  README.md
code-formatter-linter/: .clawfmt.json  README.md
cpu-emulator/: .gitignore  README.md  demo.ch8
custom-language/: .gitignore  README.md
custom-package-manager/: .gitignore  README.md
custom-package-manager/linux/: Cargo.toml  build.sh
custom-package-manager/linux/registry/utils/2.1.0/: package.json
custom-package-manager/linux/registry/utils/2.1.0/files/: utils.js
discord-ai-bot/: .gitignore  LICENSE  README.md
dns-resolver/: .gitignore  README.md
dotfiles/: .gitignore  README.md
file-compression-tool/: .gitignore  README.md
git-clone-scratch/: .gitignore  README.md
gpu-ray-tracer/: .gitignore  README.md
http-server-cpp/: .gitignore  README.md
keylogger-detector/: README.md
linux-auto-setup/: .gitignore  README.md
malware-scanner-ai/: README.md
multiplayer-game-cpp/: .gitignore  README.md
neural-network-scratch/: .gitignore  README.md
p2p-file-sharing/: .gitignore  README.md
packet-sniffer/: .gitignore  README.md
password-manager/: .gitignore  README.md
(+253 files in other folders)
