[package]
name = "clawpkg"
version = "1.0.0"
edition = "2021"
description = "A minimal, fast package manager with dependency resolution and lock files."
authors = ["clavexis <github.com/clavexis>"]

[[bin]]
name = "clawpkg"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 3
